--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/konatess/FriendFinder#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "nodemon": "^1.18.6",
     "path": "^0.12.7"
   }
 }
